Now supports Java 9+ modules.